# learning-wgpu-is-fun

./: Cargo.toml  index.html  rustfmt.toml
src/: alt_shader.wgsl  camera_controller.rs  lib.rs  main.rs  shader.wgsl  texture.rs
