[package]
name = "wgpu_tutorial"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
bytemuck = { version = "1.4", features = [ "derive" ] }
cfg-if = "1.0.0"
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.2.5"
wgpu = "0.12.0"
winit = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
wgpu = { version = "0.12", features = ["webgl"]}

